--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/appCompatButton"
+        android:id="@+id/btnLoginAction"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -118,8 +118,8 @@
         android:text="@string/alreadyHaveAccount"
         android:textColor="@color/secondary"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
-        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />
+        app:layout_constraintEnd_toEndOf="@+id/btnLoginAction"
+        app:layout_constraintStart_toStartOf="@+id/btnLoginAction"
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginAction" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
