--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="primary">#006CF6</color>
     <color name="secondary">#432C81</color>
     <color name="grey_light">#9AA0B8</color>
+    <color name="green">#84ffb1</color>
+    <color name="red">#ff8484</color>
 </resources>
