--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,25 +7,25 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.fillahdev.hyper_c_patient.ui.home.ui.home.HomeFragment"
+        android:name="com.fillahdev.hytenc_patient.ui.home.ui.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_schedule"
-        android:name="com.fillahdev.hyper_c_patient.ui.home.ui.schedule.ScheduleFragment"
+        android:name="com.fillahdev.hytenc_patient.ui.home.ui.schedule.ScheduleFragment"
         android:label="@string/title_schedule"
         tools:layout="@layout/fragment_schedule" />
 
     <fragment
         android:id="@+id/navigation_settings"
-        android:name="com.fillahdev.hyper_c_patient.ui.home.ui.settings.SettingsFragment"
+        android:name="com.fillahdev.hytenc_patient.ui.home.ui.settings.SettingsFragment"
         android:label="@string/title_settings"
         tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/navigation_tips"
-        android:name="com.fillahdev.hyper_c_patient.ui.home.ui.tips.TipsFragment"
+        android:name="com.fillahdev.hytenc_patient.ui.home.ui.tips.TipsFragment"
         android:label="@string/title_tips"
         tools:layout="@layout/fragment_tips" />
 </navigation>
