--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,7 +26,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/text_have_take_medicin"
+            android:text="@string/text_state_init"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginEnd="8dp"
-        android:src="@drawable/pose_7"
+        android:src="@drawable/pose_6_full"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bannerNotifications" />
 
