--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="secondary">#432C81</color>
     <color name="grey_light">#9AA0B8</color>
     <color name="red">#ff8484</color>
-    <color name="green">#84ffa9</color>
+    <color name="green">#84ffb7</color>
+    <color name="colorAccent">#8C82FC</color>
 </resources>
